tests/fixtures/invalid/divmod_bytes_int.py
# Cannot call divmod() with Bytes, Int
x = divmod(b"hello", 1)
